@startuml

title __NTU_6_8's Class Diagram__\n

  namespace com.company {
    class com.company.Main {
    }
  }
  

  namespace com.company {
    interface com.company.Movable {
    }
  }
  

  namespace com.company {
    class com.company.MovableCircle {
    }
  }
  

  namespace com.company {
    class com.company.MovablePoint {
    }
  }
  

  namespace com.company {
    class com.company.MovableRectangle {
    }
  }
  

  com.company.MovableCircle .up.|> com.company.Movable
  com.company.MovableCircle o-- com.company.MovablePoint : center
  com.company.MovablePoint .up.|> com.company.Movable
  com.company.MovableRectangle .up.|> com.company.Movable
  com.company.MovableRectangle o-- com.company.MovablePoint : bottomRight
  com.company.MovableRectangle o-- com.company.MovablePoint : topLeft


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
